fixed overlap between content and dropdown divs

--- a/WebSite/assets/css/styles.css
+++ b/WebSite/assets/css/styles.css
@@ -112,8 +112,11 @@ div .nav-dropdown {
 
 div.nav-dropdown {
     visibility: hidden;
-    /*display: none/block;
- doesn't allocate space, but need workaround for when it's block */
+
+/* display: none/block;
+ doesn't allocate space, but need workaround for when it's block 
+ not sure this should be use. kind of looks bad.
+*/
 }
 
 .main-menu {
@@ -152,7 +155,7 @@ div.nav-dropdown {
 
 .main-content {
     position: relative; 
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 10px;
     bottom: 10px;
 
